Fix issue with .site-content visibility

--- a/app/assets/stylus/prioritize.styl
+++ b/app/assets/stylus/prioritize.styl
@@ -351,6 +351,9 @@ button
 
 // Hero
 .hero
+    &--title
+        margin 0
+
     &--container
         display none
 
@@ -400,4 +403,5 @@ button
 
 .site-content,
 .site-footer
+    opacity 0
     visibility hidden
