--- a/app/assets/stylus/widgets/post-list.styl
+++ b/app/assets/stylus/widgets/post-list.styl
@@ -11,6 +11,7 @@
         text-align center
 
         &.animated
+            left 0
             position absolute
             width 100%
 
