--- a/app/assets/stylus/widgets/site-content.styl
+++ b/app/assets/stylus/widgets/site-content.styl
@@ -2,6 +2,7 @@
     background-color $white
     image-bg()
     position relative
+    opacity 1
     visibility visible
     z-index 98
 
